force-app/main/default/objects/Contact/fields/AccountAgencyId__c.field-meta.xml
<CustomField>
    <fullName>AccountAgencyId__c</fullName>
    <formula>Account.AgencyId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Account Agency Id</label>
    <type>Text</type>
</CustomField>