force-app/main/default/objects/Contact/fields/AccountBillingCity__c.field-meta.xml
<CustomField>
    <fullName>AccountBillingCity__c</fullName>
    <formula>Account.BillingCity</formula>
    <label>X_AccountBillingCity</label>
    <type>Text</type>
</CustomField>