force-app/main/default/objects/Contact/fields/AccountBillingCountry__c.field-meta.xml
<CustomField>
    <fullName>AccountBillingCountry__c</fullName>
    <formula>Account.BillingCountry</formula>
    <label>X_AccountBillingCountry</label>
    <type>Text</type>
</CustomField>