force-app/main/default/objects/Contact/fields/AccountBillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>AccountBillingPostalCode__c</fullName>
    <formula>Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_AccountBillingPostalCode</label>
    <type>Text</type>
</CustomField>