force-app/main/default/objects/Contact/fields/AccountBillingState__c.field-meta.xml
<CustomField>
    <fullName>AccountBillingState__c</fullName>
    <formula>Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_AccountBillingState</label>
    <type>Text</type>
</CustomField>