force-app/main/default/objects/Contact/fields/AccountBillingStreet__c.field-meta.xml
<CustomField>
    <fullName>AccountBillingStreet__c</fullName>
    <formula>Account.BillingStreet</formula>
    <label>X_AccountBillingStreet</label>
    <type>Text</type>
</CustomField>