force-app/main/default/objects/Contact/fields/AccountCounty__c.field-meta.xml
<CustomField>
    <fullName>AccountCounty__c</fullName>
    <formula>Account.County__c</formula>
    <label>X_Account County</label>
    <type>Text</type>
</CustomField>