force-app/main/default/objects/Contact/fields/AccountProvince__c.field-meta.xml
<CustomField>
    <fullName>AccountProvince__c</fullName>
    <formula>Account.Province__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_AccountProvince</label>
    <type>Text</type>
</CustomField>