force-app/main/default/objects/Contact/fields/AccountStreet2__c.field-meta.xml
<CustomField>
    <fullName>AccountStreet2__c</fullName>
    <formula>Account.Street2__c</formula>
    <label>X_Account Street2</label>
    <type>Text</type>
</CustomField>