force-app/main/default/objects/Contact/fields/AdditionalApplicant__c.field-meta.xml
<CustomField>
    <fullName>AdditionalApplicant__c</fullName>
    <description>This is the applicant that is added from the external primary user.</description>
    <label>X_Additional Applicant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>