force-app/main/default/objects/Contact/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <description>Used for GOVSBIR</description>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>