force-app/main/default/objects/Contact/fields/AffiliatedInstitution__c.field-meta.xml
<CustomField>
    <fullName>AffiliatedInstitution__c</fullName>
    <description>This field saves the institution for an SME/Individual Applicants</description>
    <label>Affiliated Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>