force-app/main/default/objects/Contact/fields/AffiliatedInstitutionINDSME__c.field-meta.xml
<CustomField>
    <fullName>AffiliatedInstitutionINDSME__c</fullName>
    <formula>Account.AffiliatedInstitution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Affiliated Institution</label>
    <type>Text</type>
</CustomField>