force-app/main/default/objects/Contact/fields/AreaofExpertise__c.field-meta.xml
<CustomField>
    <fullName>AreaofExpertise__c</fullName>
    <label>X_Area of Expertise</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>