force-app/main/default/objects/Contact/fields/AuthorizedSignatoryEmail__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedSignatoryEmail__c</fullName>
    <label>X_Authorized Signatory Email</label>
    <type>Email</type>
</CustomField>