force-app/main/default/objects/Contact/fields/AuthorizedSignatoryName__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedSignatoryName__c</fullName>
    <label>X_Authorized Signatory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>