force-app/main/default/objects/Contact/fields/CongressionalDistrict__c.field-meta.xml
<CustomField>
    <fullName>CongressionalDistrict__c</fullName>
    <description>Created this field for Address Field user story
Used for GOVSBIR</description>
    <label>Congressional District</label>
    <length>3</length>
    <type>Text</type>
</CustomField>