force-app/main/default/objects/Contact/fields/CongressionalDistrict_c__c.field-meta.xml
<CustomField>
    <fullName>CongressionalDistrict_c__c</fullName>
    <label>X_CongressionalDistrict</label>
    <type>TextArea</type>
</CustomField>