force-app/main/default/objects/Contact/fields/ContactIsLoggedInUser__c.field-meta.xml
<CustomField>
    <fullName>ContactIsLoggedInUser__c</fullName>
    <formula>$User.ContactId = Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_ContactIsLoggedInUser</label>
    <type>Checkbox</type>
</CustomField>