force-app/main/default/objects/Contact/fields/ContactRelatedJunctionObject__c.field-meta.xml
<CustomField>
    <fullName>ContactRelatedJunctionObject__c</fullName>
    <description>If any value selected then in contact trigger we will check which object selected and will create junction object record.
Ex. If picklist value is Program then in trigger we will create ProgramContact__c object&apos;s record.</description>
    <inlineHelpText>If picklist value is Program then in trigger we will create ProgramContact__c object&apos;s record.</inlineHelpText>
    <label>X_Contact Related Junction Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Award</fullName>
            </value>
            <value>
                <fullName>Announcement</fullName>
            </value>
            <value>
                <fullName>PreApplication</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>AmendmentRequest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>