force-app/main/default/objects/Contact/fields/ContactTypeInternal__c.field-meta.xml
<CustomField>
    <fullName>ContactTypeInternal__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Fiscal Manager</fullName>
            </value>
            <value>
                <fullName>Fiscal Staff</fullName>
            </value>
            <value>
                <fullName>Legal Contact</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>Program Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>