force-app/main/default/objects/Contact/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>Created this field for Address Fields user story
Used for GOVSBIR</description>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>