force-app/main/default/objects/Contact/fields/County_c__c.field-meta.xml
<CustomField>
    <fullName>County_c__c</fullName>
    <label>X_County</label>
    <type>TextArea</type>
</CustomField>