force-app/main/default/objects/Contact/fields/DegreeType__c.field-meta.xml
<CustomField>
    <fullName>DegreeType__c</fullName>
    <label>X_DegreeType</label>
    <length>75</length>
    <type>Text</type>
</CustomField>