force-app/main/default/objects/Contact/fields/DegreeYear__c.field-meta.xml
<CustomField>
    <fullName>DegreeYear__c</fullName>
    <label>X_DegreeYear</label>
    <length>4</length>
    <type>Text</type>
</CustomField>