force-app/main/default/objects/Contact/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>X_Department</label>
    <length>30</length>
    <type>Text</type>
</CustomField>