force-app/main/default/objects/Contact/fields/DisabilityStatus__c.field-meta.xml
<CustomField>
    <fullName>DisabilityStatus__c</fullName>
    <label>X_DisabilityStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>