force-app/main/default/objects/Contact/fields/EmailFormula__c.field-meta.xml
<CustomField>
    <fullName>EmailFormula__c</fullName>
    <description>This field is created to display normal text [without hyperlink] in lookup modal.</description>
    <formula>Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Email</label>
    <type>Text</type>
</CustomField>