force-app/main/default/objects/Contact/fields/Ethinicity__c.field-meta.xml
<CustomField>
    <fullName>Ethinicity__c</fullName>
    <label>X_Ethinicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ethinicity</valueSetName>
    </valueSet>
</CustomField>