force-app/main/default/objects/Contact/fields/FullNameFormula__c.field-meta.xml
<CustomField>
    <fullName>FullNameFormula__c</fullName>
    <description>This field is created to display normal text [without hyperlink] in lookup modal.</description>
    <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>