force-app/main/default/objects/Contact/fields/GNT__Enable508Compliance__c.field-meta.xml
<CustomField>
    <fullName>GNT__Enable508Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accessibility Mode</label>
    <type>Checkbox</type>
</CustomField>