force-app/main/default/objects/Contact/fields/GroupCode__c.field-meta.xml
<CustomField>
    <fullName>GroupCode__c</fullName>
    <formula>Account.GroupCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_GroupCode</label>
    <type>Text</type>
</CustomField>