force-app/main/default/objects/Contact/fields/HideInvitationLink__c.field-meta.xml
<CustomField>
    <fullName>HideInvitationLink__c</fullName>
    <description>Hide Invitation Link</description>
    <formula>false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hide Invitation Link</inlineHelpText>
    <label>B_Hide Invitation Link</label>
    <type>Checkbox</type>
</CustomField>