force-app/main/default/objects/Contact/fields/HideSendInvitationBtn__c.field-meta.xml
<CustomField>
    <fullName>HideSendInvitationBtn__c</fullName>
    <formula>ISPICKVAL(ReviewerStatus__c,&apos;Active&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Hide Send Invitation Btn</label>
    <type>Checkbox</type>
</CustomField>