force-app/main/default/objects/Contact/fields/InternalContact__c.field-meta.xml
<CustomField>
    <fullName>InternalContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to control picklist values in Contact Type</description>
    <label>X_Internal Contact</label>
    <type>Checkbox</type>
</CustomField>