force-app/main/default/objects/Contact/fields/InvitedByName__c.field-meta.xml
<CustomField>
    <fullName>InvitedByName__c</fullName>
    <formula>Invited_By__r.FirstName+&apos; &apos;+Invited_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Invited by Name</label>
    <type>Text</type>
</CustomField>