force-app/main/default/objects/Contact/fields/IsUser__c.field-meta.xml
<CustomField>
    <fullName>IsUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to specify if this contact is also a user , if the checkbox is checked then this contact is also existing as a User
Used for GOVSBIR</description>
    <label>Is User</label>
    <type>Checkbox</type>
</CustomField>