force-app/main/default/objects/Contact/fields/KeyContact__c.field-meta.xml
<CustomField>
    <fullName>KeyContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the check box created to identify the key primary contact for an organization</description>
    <label>KeyContact</label>
    <type>Checkbox</type>
</CustomField>