force-app/main/default/objects/Contact/fields/KeyPOC__c.field-meta.xml
<CustomField>
    <fullName>KeyPOC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>X_Key POC</label>
    <type>Checkbox</type>
</CustomField>