force-app/main/default/objects/Contact/fields/MiddleName__c.field-meta.xml
<CustomField>
    <fullName>MiddleName__c</fullName>
    <label>X_MiddleName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>