force-app/main/default/objects/Contact/fields/NameExternalId__c.field-meta.xml
<CustomField>
    <fullName>NameExternalId__c</fullName>
    <externalId>true</externalId>
    <label>X_Name External Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>