force-app/main/default/objects/Contact/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>Organization
Changing for global search table
used for GOVSBIR</description>
    <formula>HYPERLINK((&apos;/&apos; + AccountId ), Account.Name ,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization Name</label>
    <type>Text</type>
</CustomField>