force-app/main/default/objects/Contact/fields/OverAllRisk__c.field-meta.xml
<CustomField>
    <fullName>OverAllRisk__c</fullName>
    <label>OverAllRisk</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>