force-app/main/default/objects/Contact/fields/PositionTitle__c.field-meta.xml
<CustomField>
    <fullName>PositionTitle__c</fullName>
    <label>Position Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>