force-app/main/default/objects/Contact/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <label>X_Prefix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PresidentPrefix</valueSetName>
    </valueSet>
</CustomField>