force-app/main/default/objects/Contact/fields/PrimaryAreaOfExpertise__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAreaOfExpertise__c</fullName>
    <label>Primary Area Of Expertise Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>