force-app/main/default/objects/Contact/fields/ProjectRole__c.field-meta.xml
<CustomField>
    <fullName>ProjectRole__c</fullName>
    <description>used for GOVSBIR</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Ebiz POC</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Fiscal Contact</fullName>
            </value>
            <value>
                <fullName>Fiscal Manager</fullName>
            </value>
            <value>
                <fullName>Fiscal Staff</fullName>
            </value>
            <value>
                <fullName>Grants Administrator</fullName>
            </value>
            <value>
                <fullName>Legal Contact</fullName>
            </value>
            <value>
                <fullName>Principal Investigator</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>Program Staff</fullName>
            </value>
            <value>
                <fullName>Project Director/Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>