force-app/main/default/objects/Contact/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <description>Used in RRPersonalData Grants.gov form</description>
    <label>X_Race</label>
    <length>100</length>
    <type>Text</type>
</CustomField>