force-app/main/default/objects/Contact/fields/ReadOnlyForIND__c.field-meta.xml
<CustomField>
    <fullName>ReadOnlyForIND__c</fullName>
    <formula>Account.IndividualAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_ReadOnlyForIND</label>
    <type>Checkbox</type>
</CustomField>