force-app/main/default/objects/Contact/fields/RecipientDomain__c.field-meta.xml
<CustomField>
    <fullName>RecipientDomain__c</fullName>
    <formula>$Setup.GNT__GlobalConfig__c.GNT__CommunityURLDomain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Recipient Domain</label>
    <type>Text</type>
</CustomField>