force-app/main/default/objects/Contact/fields/ReviewerApprover__c.field-meta.xml
<CustomField>
    <fullName>ReviewerApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the user for approving external reviewer</description>
    <label>X_External Reviewer Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>