force-app/main/default/objects/Contact/fields/ReviewerStatus__c.field-meta.xml
<CustomField>
    <fullName>ReviewerStatus__c</fullName>
    <description>Status field for all types of contacts. Discussed with Shiva and have not created a new status field re using reviewerStatus__c as status.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invitation Sent</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Invitation Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>