force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Project Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Field Representative</fullName>
            </value>
            <value>
                <fullName>Grants Management Officer</fullName>
            </value>
            <value>
                <fullName>Grants Management Specialist</fullName>
            </value>
            <value>
                <fullName>Project Director/PI</fullName>
                <label>Project Director/Principal Investigator(PI/PD)</label>
            </value>
            <value>
                <fullName>Project Officer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>