force-app/main/default/objects/Contact/fields/Sams__c.field-meta.xml
<CustomField>
    <fullName>Sams__c</fullName>
    <description>This is created to save the SAMS number for  individual applicants</description>
    <label>X_Sams Registration Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>