force-app/main/default/objects/Contact/fields/SecondaryAreaOfExpertise__c.field-meta.xml
<CustomField>
    <fullName>SecondaryAreaOfExpertise__c</fullName>
    <label>Secondary Area Of Expertise Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>