force-app/main/default/objects/Contact/fields/SecondaryAreaOfExpertisePicklist__c.field-meta.xml
<CustomField>
    <fullName>SecondaryAreaOfExpertisePicklist__c</fullName>
    <description>This field is to save the secondary expertise entered by the reviewer</description>
    <label>SecondaryAreaOfExpertisePicklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ambulatory Care Programs</fullName>
            </value>
            <value>
                <fullName>Primary Care</fullName>
            </value>
            <value>
                <fullName>School-based Health Care</fullName>
            </value>
            <value>
                <fullName>Capacity-building Initiatives</fullName>
            </value>
            <value>
                <fullName>Capital Health (Construction) Projects</fullName>
            </value>
            <value>
                <fullName>Children with Special Health Care Needs Chronic Disease</fullName>
            </value>
            <value>
                <fullName>Cancer Prevention and Treatment</fullName>
            </value>
            <value>
                <fullName>Maternal and Child Health Services Preventive Health Services</fullName>
            </value>
            <value>
                <fullName>Breastfeeding</fullName>
            </value>
            <value>
                <fullName>Home Visitation</fullName>
            </value>
            <value>
                <fullName>HIV Prevention Services (by risk/population)</fullName>
            </value>
            <value>
                <fullName>Adolescents/Young Adults</fullName>
            </value>
            <value>
                <fullName>MSM</fullName>
            </value>
            <value>
                <fullName>Heterosexual women and men Older Adults</fullName>
            </value>
            <value>
                <fullName>Injection Drug Users Transgendered Persons</fullName>
            </value>
            <value>
                <fullName>Care, amend and Support Services</fullName>
            </value>
            <value>
                <fullName>Ambulatory Outpatient Medical Care Oral Health</fullName>
            </value>
            <value>
                <fullName>Medical Case Management Treatment Adherence Services</fullName>
            </value>
            <value>
                <fullName>Clinical Nutrition</fullName>
            </value>
            <value>
                <fullName>Early Intervention Services Home and Community-based care</fullName>
            </value>
            <value>
                <fullName>Mental Health Services</fullName>
            </value>
            <value>
                <fullName>Substance Abuse Services</fullName>
            </value>
            <value>
                <fullName>Food Bank, Home Delivered Meals Legal Services</fullName>
            </value>
            <value>
                <fullName>Linguistic Services</fullName>
            </value>
            <value>
                <fullName>Psycho-social Support Services Outreach</fullName>
            </value>
            <value>
                <fullName>Medical Transportation Services</fullName>
            </value>
            <value>
                <fullName>HIV Housing Support Services</fullName>
            </value>
            <value>
                <fullName>HIV Testing, Referral and Navigator Services</fullName>
            </value>
            <value>
                <fullName>Retention Services (for care and treatment)</fullName>
            </value>
            <value>
                <fullName>Emergency Financial Assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>