force-app/main/default/objects/Contact/fields/SecondaryEmail__c.field-meta.xml
<CustomField>
    <fullName>SecondaryEmail__c</fullName>
    <label>X_Email</label>
    <type>Email</type>
</CustomField>