force-app/main/default/objects/Contact/fields/SecondaryFirstName__c.field-meta.xml
<CustomField>
    <fullName>SecondaryFirstName__c</fullName>
    <label>X_First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>