force-app/main/default/objects/Contact/fields/SecondaryLastName__c.field-meta.xml
<CustomField>
    <fullName>SecondaryLastName__c</fullName>
    <label>X_Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>