force-app/main/default/objects/Contact/fields/SecondaryPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>SecondaryPhoneNumber__c</fullName>
    <label>X_Phone Number</label>
    <type>Phone</type>
</CustomField>