force-app/main/default/objects/Contact/fields/SecondaryTitle__c.field-meta.xml
<CustomField>
    <fullName>SecondaryTitle__c</fullName>
    <label>X_Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>