force-app/main/default/objects/Contact/fields/SecurityToken__c.field-meta.xml
<CustomField>
    <fullName>SecurityToken__c</fullName>
    <label>X_Security Token</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>