force-app/main/default/objects/Contact/fields/TargetRecordId__c.field-meta.xml
<CustomField>
    <fullName>TargetRecordId__c</fullName>
    <description>If Contact related Junction Object picklist value is selected then in trigger we will create (Value)Contact__c object&apos;s record. with this Target Record Id value</description>
    <label>X_Target Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>