force-app/main/default/objects/Contact/fields/TaxId__c.field-meta.xml
<CustomField>
    <fullName>TaxId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>X_Tax Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>