force-app/main/default/objects/Contact/fields/TertiaryAreaOfExpertise__c.field-meta.xml
<CustomField>
    <fullName>TertiaryAreaOfExpertise__c</fullName>
    <label>Tertiary Area Of Expertise Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>